--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "dlrg-discord-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Daniel Swiatek",
-  "license": "ISC",
-  "dependencies": {
-    "discord.js": "^12.5.1",
-    "require-uncached": "^2.0.0"
+    "name": "dlrg-discord-bot",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "docker-compose build && docker-compose up"
+    },
+    "keywords": [],
+    "author": "Daniel Swiatek",
+    "license": "ISC",
+    "dependencies": {
+      "discord.js": "^12.5.1",
+      "require-uncached": "^2.0.0"
+    }
   }
-}
+  
