--- a/api/src/settings.json
+++ b/api/src/settings.json
@@ -2,6 +2,7 @@
     "token": "",
     "guild_id": "",
     "admin_role": "",
-    "channel_controller_message_id": "781924685566836756",
-    "channel_controller_category_id": "781923621425381377"
+    "channel_controller_message_id": "783051395485663264",
+    "channel_controller_category_id": "781923621425381377",
+    "channel_controller_id": "781923856969367662"
 }
